# flv-kf-protocol

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
kf-protocol-api/: Cargo.toml
kf-protocol-api/src/: common.rs  error.rs  record.rs
kf-protocol-core/: Cargo.toml
kf-protocol-derive/: Cargo.toml  README.md
kf-protocol-derive/src/: de.rs  lib.rs  ser.rs  util.rs  version.rs
kf-protocol-derive/src/ast/: container.rs  enum.rs  mod.rs  prop.rs  struct.rs
kf-protocol-dump/: Cargo.toml
kf-protocol-fs/: Cargo.toml
kf-protocol-message/: Cargo.toml
kf-protocol-message/src/: fetch_handler.rs
kf-protocol-message/src/kf_code_gen/: metadata.rs
kf-protocol-transport/: Cargo.toml
kf-protocol-transport/src/: codec.rs
src/: lib.rs
tests/: enum.rs
