[package]
name = "kf-protocol"
edition = "2018"
version = "3.1.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Native Rust implementation of kafka protocol"
repository = "https://github.com/infinyon/flv-kf-protocol"
license = "Apache-2.0"
categories = ["encoding","api-bindings"]

[features]
# default = ["api","message","transport","fs"]
api = ["kf-protocol-api"]
message = ["kf-protocol-message"]
transport = ["kf-protocol-transport"]
fs = ["kf-protocol-fs"]


[dependencies]
log = "0.4.8"
kf-protocol-core = { version = "0.1.0", path = "kf-protocol-core" }
kf-protocol-api = { version = "2.0.0", path = "kf-protocol-api", optional = true}
kf-protocol-derive = { version = "0.2.0", path = "kf-protocol-derive"}
kf-protocol-transport = { version = "2.0.0", path = "kf-protocol-transport", optional = true}
kf-protocol-message = { version = "2.0.0", path = "kf-protocol-message", optional =  true }
kf-protocol-fs = { version = "3.0.0", path = "kf-protocol-fs", optional = true }

[dev-dependencies]
flv-util = { version = "0.4.0"}