[package]
name = "kf-protocol-derive"
version = "0.1.3"
edition = "2018"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description =  "Procedure macro to encode/decode rust structure/enum using kafka protocol"
repository = "https://github.com/infinyon/flv-kf-protocol"
license = "Apache-2.0"
categories = ["encoding"]

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = "1.0.19"
quote = "1.0.7"
log = "0.4"

[dependencies.syn]
version = "1.0.38"
features = ["full", "extra-traits"]
